@@ -1,3 +1,7 @@
+2006-06-20  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/writer.py (KickstartWriter.doIscsi):  Add iscsi writer.
+
 2006-06-20  Jeremy Katz  <katzj@redhat.com>
 
 	* pykickstart/parser.py (KickstartHandlers.doIscsi): Initial iscsi
